data/all_generated_tests/raw_wast_tests/unreachable_TypeMismatchinControlFlowInstructions_1579.wast
;; 10. **Test Description:** Implement `unreachable` within a `return` construct that would prematurely interrupt the type management of post-return instructions.    **Constraint:** Ensures stack types expected after return are properly handled when interrupted by `unreachable`.    **Reasoning:** Validates type enforcement and stack correctness even during premature returns caused by `unreachable`.

(assert_invalid
  (module (func $type-unreachable-in-return (result i32)
    (return (unreachable))
    (i32.const 42)
  ))
  "type mismatch"
)